Added reference to COPYING.

--- a/README
+++ b/README
@@ -6,6 +6,8 @@ functionality for jit-compiling functions, including integrating those
 functions as callable methods from within Ruby.  Abstractions are also
 provided so that jit code may be written in a ruby-like manner.
 
+Please see the file COPYING for license information.
+
 A simple example:
 
   :include: sample/simple.rb
