Updated version number and documentation.

--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-Ruby-libjit 0.1.0
+Ruby-libjit 0.2.0
 Copyright (C) 2008 Paul Brannan
 
 Ruby-libjit is a wrapper for the libjit library.  It provides basic
@@ -7,6 +7,12 @@ functions as callable methods from within Ruby.  Abstractions are also
 provided so that jit code may be written in a ruby-like manner.
 
 Please see the file COPYING for license information.
+
+To install it:
+
+  gem install ruby-libjit
+
+but you'll probably need to install libjit itself first (see below).
 
 A simple example:
 
@@ -21,27 +27,12 @@ To build ruby-libjit, you will need to install libjit.  If it is not
 available pre-compiled for your platform, you may build the latest
 release like this:
 
-  $ wget ftp://ftp.gnu.org/gnu/dotgnu/pnet/libjit-0.1.0.tar.gz
-  $ tar xvfz libjit-0.1.0.tar.gz
-  $ cd libjit-0.1.0
+  $ wget ftp://ftp.gnu.org/gnu/dotgnu/libjit/libjit-0.1.2.tar.gz
+  $ tar xvfz libjit-0.1.2.tar.gz
+  $ cd libjit-0.1.2
   $ ./configure
   $ make
   $ sudo make install
-
-Or the latest development version like this:
-
-  $ cvs -z3 -d:pserver:anonymous@cvs.sv.gnu.org:/sources/dotgnu-pnet co libjit
-  $ cd libjit
-  $ ./auto_gen.sh
-  $ ./configure
-  $ make
-  $ sudo make install
-
-To build ruby-libjit, run setup.rb:
-
-  $ ruby setup.rb config
-  $ ruby setup.rb setup
-  $ sudo ruby setup.rb install
 
 For a more complete JIT framework and compiler for Ruby code, please
 take a look at Ludicrous:
